--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>AekuetUI</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="bg-gray-900 min-h-screen" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
