home page update

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>AekuetUI</title>
   </head>
   <body>
-    <div class="bg-[#FFFFFF] min-h-screen" id="root"></div>
+    <div class="" id="root"></div>
 
     <!-- <div class="visme_d" data-title="Untitled Project" data-url="x4v7m1wq-untitled-project?fullPage=true" data-domain="forms" data-full-page="true" data-min-height="100vh" data-form-id="66746"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script> -->
     <script type="module" src="/src/main.tsx"></script>
